--- a/process/package.json
+++ b/process/package.json
@@ -18,6 +18,7 @@
     "express": "^4.15.4",
     "mocha": "^3.5.0",
     "request": "^2.81.0",
+    "sha1": "^1.1.1",
     "sprintf": "^0.1.5"
   }
 }
