--- a/process/package.json
+++ b/process/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "express": "^4.15.4",
     "mocha": "^3.5.0",
     "request": "^2.81.0",
