--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a distributed key value store from scratch",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "cover": "istanbul cover _mocha",
+    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
   },
   "keywords": [
     "distributed",
@@ -21,5 +23,10 @@
     "request": "^2.81.0",
     "sha1": "^1.1.1",
     "sprintf": "^0.1.5"
+  },
+  "devDependencies": {
+    "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
